Fixed login window

--- a/lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.ui
+++ b/lliurex-shutdowner.install/usr/share/lliurex-shutdowner/rsrc/lliurex-shutdowner.ui
@@ -351,7 +351,7 @@
               <object class="GtkEntry" id="user_entry">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <property name="primary_icon_name">emblem-personal</property>
+                <property name="primary_icon_name">actor</property>
                 <property name="placeholder_text" translatable="yes">User</property>
               </object>
               <packing>
@@ -365,7 +365,7 @@
                 <property name="can_focus">True</property>
                 <property name="visibility">False</property>
                 <property name="invisible_char">•</property>
-                <property name="primary_icon_name">badge-small</property>
+                <property name="primary_icon_name">dialog-password</property>
                 <property name="placeholder_text" translatable="yes">Password</property>
               </object>
               <packing>
