--- a/lliurex-shutdowner-common.install/usr/share/lliurex-shutdowner/rsrc/shutdowner-lliurex-dialog.ui
+++ b/lliurex-shutdowner-common.install/usr/share/lliurex-shutdowner/rsrc/shutdowner-lliurex-dialog.ui
@@ -7,6 +7,7 @@
     <property name="title" translatable="yes">LliureX Shutdowner</property>
     <property name="resizable">False</property>
     <property name="window_position">center</property>
+    <property name="icon_name">lliurex-shutdowner</property>    
     <child>
       <object class="GtkBox" id="box1">
         <property name="visible">True</property>
